tests/compiletests/ui/lang/core/slice/iter.stderr
error: cannot offset a pointer to an arbitrary element
  --> /home/eddy/.rustup/toolchains/nightly-2025-06-30-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/ptr/mut_ptr.rs:1008:18
   |
LL |         unsafe { intrinsics::offset(self, count) }
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: used from within Fragment entry-point `main`
  --> /home/eddy/.rustup/toolchains/nightly-2025-06-30-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/ptr/mut_ptr.rs:1008:18
   |
LL |         unsafe { intrinsics::offset(self, count) }
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot offset a pointer to an arbitrary element
  --> /home/eddy/.rustup/toolchains/nightly-2025-06-30-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/ptr/non_null.rs:652:37
   |
LL |         unsafe { NonNull { pointer: intrinsics::offset(self.as_ptr(), count) } }
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: used from within Fragment entry-point `main`
  --> /home/eddy/.rustup/toolchains/nightly-2025-06-30-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/ptr/non_null.rs:652:37
   |
LL |         unsafe { NonNull { pointer: intrinsics::offset(self.as_ptr(), count) } }
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

